# audiorecast

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/embeddings/: paths.jsonl  slice_index.faiss
data/ingest/: ben_horsburgh.txt  jared_halley.txt  misc.txt  penn_masala.txt
scripts/: build_faiss_index.py  convert_song.py  ingest_acapellas.py  update_faiss_index.py
src/audiorecast/: pipeline.py
src/audiorecast/data/: downloader.py  segmenter.py  stem_splitter.py
src/audiorecast/embedding/: extractor.py
src/audiorecast/matching/: index_builder.py  index_updater.py  matcher.py
src/audiorecast/synthesis/: assembler.py  synthesizer.py
tests/: print_waveform.py
