[tool.poetry]
name = "audiorecast"
version = "0.1.0"
description = "Turn any song into an acapella-style version using ML"
authors = ["Qasim Khawaja <qasimkhawaja400@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "audiorecast", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
torch = "^2.7.1"
torchaudio = "^2.7.1"
yt-dlp = "^2025.7.21"
demucs = "^4.0.1"
librosa = "^0.11.0"
faiss-cpu = "^1.11.0.post1"
soundfile = "^0.13.1"
pydub = "^0.25.1"
hydra-core = "^1.3.2"
pydantic = "^2.11.7"
diffq = "^0.2.4"
scipy = "^1.16.1"
tqdm = "^4.67.1"
matplotlib = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
